refactor: :recycle: better subscription modal feedback
